z-index corrections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,6 +359,9 @@ section .container {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+#about{
+  z-index: 0;
+}
 .about-me .content h3 {
   font-weight: 700;
   font-size: 26px;
